# token-factory-contracts

./: Cargo.toml  ERC20PresetMinterBurner.sol  ERC20SudoMinterBurner.sol  README.md  abi.json  compile.js  package-lock.json  package.json
src/: main.rs
