[package]
name = 'abi-gen'
description = 'generate raw abi calls for runtime'
license = 'Unlicense'
version = '0.1.0'
authors = ["Amar Singh <asingchrony@protonmail.com>"]
edition = '2018'

[[bin]]
name = 'abi-gen'
path = 'src/main.rs'

[dependencies]
tiny-keccak = { version = "2.0.1", features = ["sha3"] }
hex = "0.4"